--- a/fp.css
+++ b/fp.css
@@ -99,7 +99,7 @@
     display: block;
     width: 16px;
     height: 16px;
-    content: '\\D7';
+    content: "\\D7";
     text-align: center!important;
 }
 
